Finish static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,4 @@
-<% provide(:title, "Help") %>
+<% provide(:title, "About") %>
 <h1>Distraqt App</h1>
   <p>The world is full of distractions. Distraqt will help you achieve your goals and enjoy yourself in the process.</p>
-
 
