--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,4 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
-
-    <h1>Distraqt</h1>
-            <p>The world is full of distractions. Distraqt will help you achieve your goals and enjoy yourself in the process.</p>
+<% provide(:title, "Home") %>
+<h1>Distraqt App</h1>
+  <p>The world is full of distractions. Distraqt will help you achieve your goals and enjoy yourself in the process.</p>
 
