Finish layout and routes

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,11 @@
 <% provide(:title, "About") %>
-<h1>Distraqt App</h1>
-  <p>The world is full of distractions. Distraqt will help you achieve your goals and enjoy yourself in the process.</p>
+<h1>About</h1>
+<p>
+The world is full of distractions. Distraqt will help you achieve your goals and enjoy yourself in the process.
 
+<p>Quote of the day:</p>
+I was in the cafeteria and some guy, fooling around, throws a plate in the air….I had nothing to do so I started figuring out the motion of the rotating plate….It was effortless. It was like uncorking a bottle. Everything flowed off effortlessly. I almost tried to resist it! There was no importance to what I was doing, but ultimately there was. 
+The diagrams and the whole business that I got the Nobel Prize for came from that piddling around with the wobbling plate. - R. Feynman
+</p>
+
+<%= link_to image_tag("imgres.jpg", alt: "Einstein in flow") %>
