--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Help") %>
-<h1>Distraqt App</h1>
-  <p>The world is full of distractions. Distraqt will help you achieve your goals and enjoy yourself in the process.</p>
-
-
+<h1>Help</h1>
+<p>
+...Under Construction...
+</p>
