--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,9 @@
-<% provide(:title, "Home") %>
-<h1>Distraqt App</h1>
-  <p>The world is full of distractions. Distraqt will help you achieve your goals and enjoy yourself in the process.</p>
+<div class="center jumbotron">
+  <h1>Get Distraqted</h1>
 
+  <h2>
+    Play your work. Achieve flow.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
